# cjeb

./: README.md  build.sh
.github/workflows/: build.yml
fcitx/: CMakeLists.txt  build.sh  hanma.conf.in  hanma.txt  header.txt
fcitx/po/: fcitx5-table-hanma.pot  zh_CN.mo  zh_CN.po
ibus/: hanma_ibus.txt  header.txt
misc/: cizu.txt  cizu_freq.txt  danzi_freq.txt  danzi_freq_b.txt  gen_mb.py  gen_mb.py.bak  get_hanzi_from_zdic.sh  mb.txt  mb_ibus.txt  mb_rime.txt  refine_zdic_data.py  zdic_data.json  zdic_data.json.bak
misc/corpus/: corpus_words.txt  sort_custom.py  words100000.txt  words_custom.txt  words_custom.txt.bak
misc/ids_data/: ids.txt
misc/ty7k/: get_zdic_ty7k_detail.py  words.txt
misc/zdic_data/: ②.txt  ③.txt  ④.txt  ⑤.txt  ⑥.txt  ⑦.txt  ⑧.txt  ⺀.txt  ⺄.txt  ⺆.txt  ⺊.txt  ⺌.txt  ⺼.txt  〢.txt  コ.txt  ユ.txt  ㇀.txt  ㇇.txt  㐄.txt  㐅.txt  㐆.txt  㐌.txt  㐫.txt  㐬.txt  㐭.txt  㐱.txt  㒸.txt  㓁.txt  㓞.txt  㔾.txt  㕡.txt  㚅.txt  㚘.txt  㝉.txt  㝴.txt  㝵.txt  㞢.txt  㠯.txt  㡀.txt  㡭.txt  (+7458 more)
rime/: hanma.dict.yaml  hanma.schema.yaml  header.txt
